# pydiffsol

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_PyPI.md  build.rs  pyproject.toml  taplo.toml
.cargo/: config.toml
.github/scripts/: cibw_repair_wheel_command_windows.bat  generate_pyi.py  maturin_linux_setup.sh
.github/workflows/: CI.yml  fix_macos_wheel.sh  generate_pyi.py  install_llvm.sh  maturin_linux_setup.sh
bench/: 01_robertson_ode.jl  01_robertson_ode.py  Manifest.toml  Project.toml  bench_01_robertson_ode.py  casadi.py  casadi_models.py  casadi_robertson_ode.py  diffeq.jl  diffeq_models.jl  diffrax.py  diffrax_models.py  diffrax_robertson_ode.py  diffsol_models.py  diffsol_robertson_ode.py  main_bench.jl  main_bench.py  plot.py  tmp.jl
book/src/primer/: population_dynamics.md
book/src/primer/images/: prey-predator.html  prey-predator2.html
docs/: README.md  api.rst  bench.rst  conf.py  examples.rst  index.rst  primer.rst  requirements.in  requirements.txt  usage.rst
docs/bench/: lotka_volterra.rst  robertson_ode.rst
docs/examples/: bouncing_ball.rst  compartmenal_drug_delivery.rst  compartmental_drug_delivery.rst  electrical_circuits.rst  heat_equation.rst  population_dynamics.rst  spring_mass_systems.rst
examples/: 01_population_dynamics.py  02_spring_mass_system.py  03_heat_equation.py  1_1_population_dynamics.py  1_1_population_dynamics_solve.py  1_2_population_dynamics_phase_plane.py  2_1_spring_mass_system.py  3_1_compartmental_models_of_drug_delivery.py  3_2_bouncing_ball.py  4_1_electrical_circuits.py  5_1_heat_equation.py  _common.py  fix_matplotlib_debug.py  fixme_ci_break_test.py  test_01_population_dynamics.py  test_02_spring_mass_system.py  test_examples.py
pydiffsol/: __init__.py  multi_step_ode.py
src/: adjoint_checkpoint.rs  config.rs  convert.rs  data_type.rs  enums.rs  error.rs  host_array.rs  jit.rs  lib.rs  linear_solver_type.rs  matrix_type.rs  ode.rs  ode_config.rs  ode_solver_type.rs  options_ic.rs  options_ode.rs  py_solution.rs  py_solve.rs  py_solve_test.rs  py_state.rs  scalar_type.rs  solution.rs  solve_config.rs  solver_method.rs  solver_type.rs  valid.rs  valid_linear_solver.rs
test/: conftest.py  test_basic_api.py  test_code_snippets.py  test_concept_api.py  test_config.py  test_copy_pickle.py  test_enums.py  test_klu_available.py  test_matrix_type.py  test_multi_step_ode.py  test_readme_snippets.py  test_solution.py  test_solve.py  test_solver_type.py  test_versions.py
