[package]
name = "py-diffsol-new"
version = "0.1.0"
edition = "2021"

[lib]
name = "py_diffsol_new"
crate-type = ["cdylib"]

[features]
diffsol-llvm = []
diffsol-llvm15 = ["diffsol/diffsl-llvm15", "diffsol-llvm"]
diffsol-llvm16 = ["diffsol/diffsl-llvm16", "diffsol-llvm"]
diffsol-llvm17 = ["diffsol/diffsl-llvm17", "diffsol-llvm"]
diffsol-cranelift = ["diffsol/diffsl-cranelift"]

[dependencies]
pyo3 = { version = "0.25.0", default-features = false, features = ["extension-module"] }
diffsol = { version = "0.6.6" }
faer = "0.22.6"
nalgebra = "0.33.2"
numpy = "0.25.0"

[dev-dependencies]
pyo3 = { version = "*", features = ["auto-initialize"] }
