[package]
name = "pydiffsol"
version = "0.5.0"
edition = "2021"

[lib]
name = "pydiffsol"
crate-type = ["cdylib"]

[features]
diffsol-llvm = []
diffsol-llvm15 = ["diffsol-c/diffsl-llvm15", "diffsol-llvm"]
diffsol-llvm16 = ["diffsol-c/diffsl-llvm16", "diffsol-llvm"]
diffsol-llvm17 = ["diffsol-c/diffsl-llvm17", "diffsol-llvm"]
diffsol-llvm18 = ["diffsol-c/diffsl-llvm18", "diffsol-llvm"]
diffsol-llvm19 = ["diffsol-c/diffsl-llvm19", "diffsol-llvm"]
diffsol-llvm20 = ["diffsol-c/diffsl-llvm20", "diffsol-llvm"]
diffsol-llvm21 = ["diffsol-c/diffsl-llvm21", "diffsol-llvm"]
diffsol-cranelift = ["diffsol-c/diffsl-cranelift"]
suitesparse = ["diffsol-c/suitesparse"]

[dependencies]
pyo3 = { version = "0.27.2", default-features = false, features = ["abi3-py39", "extension-module"] }
diffsol-c = { version = "0.3.2" }
numpy = "0.27.1"
pyo3-log = "0.13.2"
serde_json = "1.0"

[dev-dependencies]
pyo3 = { version = "*", features = ["auto-initialize"] }

[build-dependencies]
cargo-lock = "11.0.1"
