[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "pydiffsol"
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = { file = "README_PyPI.md", content-type = "text/markdown" }
license-files = ["LICENSE", "LICENSE.libunwind", "LICENSE.zstd"]

dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "docutils",
    "json5",
    "markdown-it-py",
    "matplotlib",
    "pytest",
    "tomli"
]
bench = [
    "casadi",
    "diffrax",
    "jax<0.7.0",
    "matplotlib",
    "numpy",
    "pandas",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.cibuildwheel]
build = ["cp310-manylinux_x86_64", "cp310-macosx_arm64", "cp310-win_amd64"]

[tool.cibuildwheel.linux]
before-all = [
    "curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain stable -y",
    "source .github/scripts/maturin_linux_setup.sh",
]

[tool.cibuildwheel.linux.environment]
MATURIN_PEP517_ARGS="--features diffsol-llvm17 --features suitesparse"
RUSTFLAGS="-C linker-features=-lld"

[tool.cibuildwheel.macos]
repair-wheel-command = [
    "python -m pip install --force-reinstall --no-deps {wheel} wheel",
    "python .github/scripts/generate_pyi.py {wheel} tmp/wheel_add_pyi",
    "auditwheel repair -w {dest_dir} tmp/wheel_add_pyi/*.whl",
]

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "14.0"
MATURIN_PEP517_ARGS = "--features diffsol-llvm17"

[tool.cibuildwheel.macos]
repair-wheel-command = [
    "python -m pip install --force-reinstall --no-deps {wheel} wheel",
    "python .github/scripts/generate_pyi.py {wheel} tmp/wheel_add_pyi",
    "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v tmp/wheel_add_pyi/*.whl",
]
